...
      <MainScreenWorkspace {...workspace} />
    </KeyboardAvoidingView>
  );

  return (
    <SafeAreaView
      testID="main-screen"
      style={[styles.container, { backgroundColor: colors.background }]}
      edges={
        ipadLayout.isRegularWidth
          ? ["top", "bottom", "left", "right"]
          : Platform.OS === "ios" && isLandscape
            ? ["top"]
...
