...
      ]}
      keyboardAvoiding
      maxHeight={drawerMaxHeight}
      onClose={onClose}
      scrollable={false}
      subtitle={t("styleSheetSubtitle")}
      testID="conversation-settings-drawer"
      title={t("styleSheetTitle")}
      visible={visible}
    >
      <ScrollView
        style={styles.styleSheetScroll}
        automaticallyAdjustKeyboardInsets
...
