...
}: Pick<SetupGuideFooterProps, "onDismiss" | "onContinueFromIntro">) {
  const { t } = useLocalization();

  return (
    <>
      <SecondaryButton
        testID="setup-guide-not-now"
        label={t("notNow")}
        onPress={onDismiss}
      />
      <PrimaryButton
        testID="setup-guide-intro-continue"
        label={t("setupGuideContinue")}
...
